# craam2

./: .gitignore  CMakeLists.txt  CONTRIBUTORS  CRAAM.cbp  README.md  install_eigen.sh
craam/: .clang-format  Action.hpp  ActionO.hpp  GMDP.hpp  ImMDP.hpp  MDP.hpp  MDPO.hpp  RMDP.hpp  Samples.hpp  Simulation.hpp  Solution.hpp  State.hpp  Transition.hpp  config.hpp  craam_config.hpp  definitions.hpp  modeltools.hpp  simulation.hpp  solvers.hpp
craam/algorithms/: bayesian.hpp  bellman_mdp.hpp  bellman_mdpo.hpp  (+11 more)
include/: install_eigen.sh
rcraam/: CMakeLists.txt  DESCRIPTION  NAMESPACE  R  copy_libs.sh
rcraam/R/: RcppExports.R  basics.R
rcraam/include/: craam  csv.h  eigen3  rm
rcraam/inst/include/: craam_config.hpp  csv.h  rcraam.h  rcraam_utils.hpp
rcraam/inst/include/craam/: Action.hpp  GMDP.hpp  ImMDP.hpp  Samples.hpp  Solution.hpp  craam_config.hpp  craam_config.hpp.in  definitions.hpp  modeltools.hpp  simulation.hpp  solvers.hpp
rcraam/inst/include/craam/algorithms/: bayesian.hpp  bellman_mdp.hpp  nature_declarations.hpp  nature_response.hpp  soft_robust.hpp  values.hpp
rcraam/inst/include/craam/optimization/: bisection.hpp  gurobi.hpp  optimization.hpp  srect_gurobi.hpp
rcraam/inst/include/craam/simulators/: inventory.hpp  population.hpp
rcraam/inst/include/eigen3/Eigen/src/Core/products/: Parallelizer.h
rcraam/man/: avar.Rd  compute_qvalues.Rd  gurobi_set_param.Rd  matrix_mdp_transition.Rd  mdp_clean.Rd  mdp_from_samples.Rd  mdp_population.Rd  pack_actions.Rd  rcraam_set_threads.Rd  rcraam_supports_gurobi.Rd  revaluate_mdpo_rnd.Rd  rsolve_mdp_s.Rd  rsolve_mdp_sa.Rd  rsolve_mdpo_sa.Rd  solve_mdp.Rd  solve_mdp_rand.Rd  srsolve_mdpo.Rd  worstcase_l1.Rd  worstcase_l1_w.Rd  worstcase_l1_w_gurobi.Rd  worstcase_linf_w_gurobi.Rd
rcraam/src/: .clang-format  Makevars  Makevars.win  RcppExports.cpp  config.hpp  rcraam.pro  robust_algorithms.cpp  simulation.cpp  utils.hpp
rcraam/src-i386/: RcppExports.cpp  utils.hpp
rcraam/src-x64/: robust_algorithms.cpp  simulation.cpp
rcraam/tests/: riverswim_mdp.R  riverswim_mdp.csv
rcraamx/: CMakeLists.txt  DESCRIPTION
test/: .clang-format  benchmark.cpp  core_tests.hpp  dev.cpp  example_mdps.hpp  implementable_tests.hpp  simulation_tests.hpp  test.cpp
(+167 files in other folders)
